# SimpleLoggingLibrary

./: CMakeLists.txt  README.md
binary/: Library.cpp  SimpleLoggingLibrary.cpp  main.cpp
src/: Library.h  SimpleLoggingLibrary.h
